# runmat

./: .amp-session-sourcery-review.md  .coderabbit.yaml  .gitignore  .runmat.example.yaml  .rustmat.example.yaml  AGENTS.md  ASYNC_RUNTIME_MIGRATION.md  BuiltinMetadataSpecification.ts  COMMIT_MSG.txt  Cargo.toml  FINAL_ASYNC_ERROR_MODEL.md  LICENSE.md  MERGE_PLAN.md  NEXT_PLAN.md  NEXT_STEPS.md  PACKAGE_NAMESPACE_FIX.md  PLAN.md  PR_TEMPLATE.md  README.md  README.zh-CN.md  SOURCERY.md  SYMBOLIC_IGNITION_REFACTORING.md  Symbolic_Engine_Plan.txt  TEAM_A_OUT.md  TEAM_A_PROGRESS.md  TEAM_A_START.md  TEAM_B_OUT.md  TEAM_B_PROGRESS.md  TEAM_B_START.md  TEAM_C_OUT.md  TEAM_C_PROGRESS.md  TEAM_C_START.md  TEAM_D_OUT.md  TEAM_D_PROGRESS.md  TEAM_D_START.md  TEAM_MERGE_PROGRESS.md  TEMP_WORK_CONTEXT.md  WORK_CONTEXT.md  build_log.txt  memo_studying_symbolica_safely_for_run_mat_integration.md  (+12 more)
crates/runmat-accelerate/: Cargo.toml  README.md
crates/runmat-accelerate-api/: Cargo.toml  README.md
crates/runmat-accelerate-api/src/: lib.rs
crates/runmat-accelerate/src/: fusion.rs  fusion_exec.rs  fusion_residency.rs  graph.rs  host_lu.rs  lib.rs  native_auto.rs  precision.rs  reduction_meta.rs  simple_provider.rs  sortrows_host.rs  telemetry.rs  web_auto_offload_store.rs  wgpu_backend.rs
crates/runmat-accelerate/tests/: fft_staged.rs  fused_reduction_dim_n.rs  fused_reduction_min_len.rs  fused_reduction_single_pass_dbg.rs  fused_reduction_sum_mul.rs  fused_reduction_sum_native.rs  fused_reduction_sum_square.rs  fused_square_mean_all_parity.rs  fusion_patterns.rs  image_normalize.rs  matmul_epilogue.rs  matmul_pca_regression.rs  matmul_residency.rs  matmul_small_k.rs  native_auto.rs  nlms_fused_integration.rs  pipeline_cache.rs  plan_multi_input_reduction.rs  precision_guard.rs  provider_init.rs  qr_precision_boundary.rs  reduction_broadcast.rs  reduction_mean_all.rs  stochastic_evolution.rs  syrk.rs  telemetry.rs  transpose.rs  workgroup_smoke.rs
crates/runmat-async/: Cargo.toml
crates/runmat-async/src/: lib.rs  runtime_error.rs
crates/runmat-builtins/: Cargo.toml  build.rs
crates/runmat-builtins/src/: lib.rs  semantics.rs  shape_rules.rs  symbolic.rs
crates/runmat-builtins/tests/: registry.rs
crates/runmat-cli/: Cargo.toml  build.rs
crates/runmat-cli/src/: config.rs  diagnostics.rs  lib.rs  logging.rs  main.rs  public_api.rs  remote.rs  telemetry.rs  telemetry_sink.rs
crates/runmat-cli/tests/: cli.rs  environment.rs  integration.rs  public_api_spec.rs  telemetry.rs
crates/runmat-config/: Cargo.toml
crates/runmat-config/src/: lib.rs  project.rs
crates/runmat-config/tests/: accelerate_bridge.rs  defaults.rs  env_overrides.rs  loading.rs  project_manifest.rs  serialization.rs
crates/runmat-core/: Cargo.toml
crates/runmat-core/src/: abi.rs  diagnostic_path.rs  error.rs  fusion_snapshot.rs  lib.rs  profiling.rs  source_pool.rs  telemetry.rs  tests.rs  value_metadata.rs
crates/runmat-core/tests/: async_stdin.rs  command_controls.rs  engine.rs  error_namespace_compat.rs  fusion_regressions.rs  integration.rs  printf_semantics.rs  repl.rs  semicolon_suppression.rs  variable_persistence.rs
crates/runmat-embed/: Cargo.toml  README.md  build.rs  cbindgen.toml
crates/runmat-embed/examples/: hello.c  mex_double.c
crates/runmat-embed/include/: rm_mex.h  runmat.h
crates/runmat-embed/src/: lib.rs  mex.rs
crates/runmat-ffi/: Cargo.toml  README.md
crates/runmat-ffi/src/: lib.rs  library.rs  parser.rs  registry.rs  types.rs
crates/runmat-ffi/tests/: integration_test.rs
crates/runmat-filesystem/: Cargo.toml
crates/runmat-filesystem/src/: data_contract.rs  lib.rs  memory.rs  native.rs  remote.rs  sandbox.rs  wasm.rs
crates/runmat-gc/: Cargo.toml  README.md
crates/runmat-gc/src/: allocator.rs  barriers.rs  collector.rs  compression.rs  config.rs  gc_ptr.rs  generations.rs  lib.rs  roots.rs  stats.rs
crates/runmat-gc/tests/: allocation.rs  collection.rs  presets.rs  soundness.rs  stress.rs
crates/runmat-hir/: Cargo.toml  README.md
crates/runmat-hir/src/: diagnostic.rs  error.rs  hir.rs  ids.rs  lib.rs  lowering_context.rs  remapping.rs  span.rs
crates/runmat-hir/tests/: attributes.rs  binder_disambiguation.rs  coverage.rs  fuzz_lowering.rs  hir.rs  hir_lowering.rs  lowering_extras.rs  semantic_lowering.rs  type_inference.rs
crates/runmat-ignition/: COMPILER_PIPELINE.md  Cargo.toml  ERROR_MODEL.md  INDEXING_AND_SLICING.md  INSTR_SET.md  MULTI_OUTPUT_TODO.md  OOP_SEMANTICS.md  README.md  TODOs.md
crates/runmat-ignition/src/: accel_graph.rs  bytecode.rs  compiler.rs  functions.rs  fusion_stack_layout.rs  gc_roots.rs  instr.rs  lib.rs  vm.rs
crates/runmat-ignition/tests/: basics.rs  cell_arrays.rs  closures.rs  control_flow.rs  datetime.rs  exceptions.rs  functions.rs  fusion_gpu.rs  globals_persistents.rs  indexing.rs  indexing_properties.rs  interpreter.rs  logic.rs  loop_edge_cases.rs  loops.rs  lvalue_assign.rs  matrix_division.rs  matrix_slicing.rs  meshgrid_ranges.rs  multid_indexing.rs  ranges.rs  test_helpers.rs
crates/runmat-kernel/: Cargo.toml
crates/runmat-kernel/src/: connection.rs  execution.rs  jupyter_plotting.rs  lib.rs  protocol.rs  server.rs  (+1 more)
crates/runmat-lexer/: Cargo.toml  README.md
crates/runmat-logging/: Cargo.toml
crates/runmat-lsp/: Cargo.toml  build.rs
crates/runmat-macros/: Cargo.toml
crates/runmat-mir/: Cargo.toml
crates/runmat-parser/: Cargo.toml  README.md
crates/runmat-plot/: Cargo.toml  README.md
crates/runmat-repl/: Cargo.toml  debug_stats.rs
crates/runmat-runtime/: BUILTIN_PACKAGING.md  Cargo.toml  LIBRARY.md  NOTES.md  TODOs.md  build.rs  generation-plan-2.md
crates/runmat-runtime-integration-tests/: Cargo.toml
crates/runmat-server-client/: Cargo.toml  build.rs
crates/runmat-snapshot/: Cargo.toml
crates/runmat-static-analysis/: Cargo.toml
runmat/: Cargo.toml
runmat/src/: config.rs  main.rs  telemetry.rs
runmat/tests/: cli.rs  environment.rs  integration.rs  telemetry.rs
rustmat/: Cargo.toml
rustmat/src/: config.rs  main.rs
rustmat/tests/: cli.rs  environment.rs  integration.rs
(+3593 files in other folders)
