[workspace]
members = [
    "crates/runmat-lexer",
    "crates/runmat-parser",
    "crates/runmat-hir",
    "crates/runmat-ignition",
    "crates/runmat-accelerate-api",
    "crates/runmat-accelerate",
    "crates/runmat-plot",
    "crates/runmat-repl",
    "crates/runmat-macros",
    "crates/runmat-builtins",
    "crates/runmat-runtime",
    "crates/runmat-kernel",
    "crates/runmat-turbine",
    "crates/runmat-gc",
    "crates/runmat-snapshot",
    "runmat",
]
resolver = "2"

[workspace.dependencies]
# External dependencies used across multiple crates
inventory = "0.1"
syn = { version = "1", features = ["full"] }
quote = "1"
proc-macro2 = "1"
logos = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
zmq = "0.10"
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive", "env"] }
env_logger = "0.11"
log = "0.4"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
cranelift = "0.115"
cranelift-jit = "0.115"
cranelift-module = "0.115"
cranelift-codegen = "0.115"
cranelift-native = "0.115"
target-lexicon = "0.12"

# Internal workspace crates
runmat-lexer = { path = "crates/runmat-lexer" }
runmat-parser = { path = "crates/runmat-parser" }
runmat-hir = { path = "crates/runmat-hir" }
runmat-ignition = { path = "crates/runmat-ignition" }
runmat-plot = { path = "crates/runmat-plot" }
runmat-repl = { path = "crates/runmat-repl" }
runmat-macros = { path = "crates/runmat-macros" }
runmat-builtins = { path = "crates/runmat-builtins" }
runmat-runtime = { path = "crates/runmat-runtime" }
runmat-kernel = { path = "crates/runmat-kernel" }
runmat-turbine = { path = "crates/runmat-turbine" }
runmat-gc = { path = "crates/runmat-gc" }
runmat-snapshot = { path = "crates/runmat-snapshot" }
runmat-accelerate = { path = "crates/runmat-accelerate" }
