[workspace]
members = [
    "crates/runmat-lexer",
    "crates/runmat-parser",
    "crates/runmat-hir",
    "crates/runmat-ignition",
    "crates/runmat-accelerate-api",
    "crates/runmat-accelerate",
    "crates/runmat-plot",
    "crates/runmat-repl",
    "crates/runmat-macros",
    "crates/runmat-builtins",
    "crates/runmat-runtime",
    "crates/runmat-runtime-integration-tests",
    "crates/runmat-kernel",
    "crates/runmat-turbine",
    "crates/runmat-gc-api",
    "crates/runmat-gc",
    "crates/runmat-snapshot",
    "crates/runmat-lsp",
    "runmat",
    "tools/runmatfunc",
]
resolver = "2"

[workspace.dependencies]
# External dependencies used across multiple crates
inventory = "0.1"
syn = { version = "1", features = ["full"] }
quote = "1"
proc-macro2 = "1"
logos = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
zmq = "0.10"
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive", "env"] }
env_logger = "0.11"
log = "0.4"
thiserror = "1"
chrono = { version = "0.4.42", features = ["serde"] }
anyhow = "1"
cranelift = "0.115"
cranelift-jit = "0.115"
cranelift-module = "0.115"
cranelift-codegen = "0.115"
cranelift-native = "0.115"
target-lexicon = "0.12"
tower-lsp = "0.20"
once_cell = "1"

# Internal workspace crates
runmat-lexer = { version = "=0.2.7", path = "crates/runmat-lexer" }
runmat-parser = { version = "=0.2.7", path = "crates/runmat-parser" }
runmat-hir = { version = "=0.2.7", path = "crates/runmat-hir" }
runmat-ignition = { version = "=0.2.7", path = "crates/runmat-ignition" }
runmat-plot = { version = "=0.2.7", path = "crates/runmat-plot" }
runmat-repl = { version = "=0.2.7", path = "crates/runmat-repl" }
runmat-macros = { version = "=0.2.7", path = "crates/runmat-macros" }
runmat-builtins = { version = "=0.2.7", path = "crates/runmat-builtins" }
runmat-runtime = { version = "=0.2.7", path = "crates/runmat-runtime" }
runmat-kernel = { version = "=0.2.7", path = "crates/runmat-kernel" }
runmat-turbine = { version = "=0.2.7", path = "crates/runmat-turbine" }
runmat-gc = { version = "=0.2.7", path = "crates/runmat-gc" }
runmat-snapshot = { version = "=0.2.7", path = "crates/runmat-snapshot" }
runmat-accelerate = { version = "=0.2.7", path = "crates/runmat-accelerate" }
runmat-accelerate-api = { version = "=0.2.7", path = "crates/runmat-accelerate-api" }
runmat-gc-api = { version = "=0.2.7", path = "crates/runmat-gc-api" }

[patch.crates-io]
# Ensure no accidental cycle via crates.io variants
