[workspace]
members = [
    "crates/runmat-control-flow",
    "crates/runmat-lexer",
    "crates/runmat-parser",
    "crates/runmat-hir",
    "crates/runmat-ignition",
    "crates/runmat-accelerate-api",
    "crates/runmat-accelerate",
    "crates/runmat-plot",
    "crates/runmat-macros",
    "crates/runmat-builtins",
    "crates/runmat-runtime",
    "crates/runmat-runtime-integration-tests",
    "crates/runmat-kernel",
    "crates/runmat-turbine",
    "crates/runmat-gc-api",
    "crates/runmat-gc",
    "crates/runmat-snapshot",
    "crates/runmat-logging",
    "crates/runmat-lsp",
    "crates/runmat-cli",
    "tools/runmatfunc",
    "crates/runmat-core",
    "crates/runmat-time",
    "crates/runmat-wasm",
    "crates/runmat-thread-local",
    "crates/runmat-filesystem", "tools/wasm-paths",
    "crates/runmat-config",
]
resolver = "2"

[workspace.dependencies]
# External dependencies used across multiple crates
inventory = "0.1"
syn = { version = "1", features = ["full"] }
quote = "1"
proc-macro2 = "1"
logos = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
zmq = "0.10"
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive", "env"] }
env_logger = "0.11"
log = "0.4"
thiserror = "1"
chrono = { version = "0.4.42", features = ["serde"] }
anyhow = "1"
cranelift = "0.115"
cranelift-jit = "0.115"
cranelift-module = "0.115"
cranelift-codegen = "0.115"
cranelift-native = "0.115"
target-lexicon = "0.12"
tower-lsp = "0.20"
once_cell = "1"

# Internal workspace crates
runmat-lexer = { version = "=0.2.8", path = "crates/runmat-lexer" }
runmat-parser = { version = "=0.2.8", path = "crates/runmat-parser" }
runmat-hir = { version = "=0.2.8", path = "crates/runmat-hir" }
runmat-ignition = { version = "=0.2.8", path = "crates/runmat-ignition" }
runmat-control-flow = { version = "=0.2.8", path = "crates/runmat-control-flow" }
runmat-core = { version = "=0.2.8", path = "crates/runmat-core", default-features = false }
runmat-plot = { version = "=0.2.8", path = "crates/runmat-plot", default-features = false }
runmat-macros = { version = "=0.2.8", path = "crates/runmat-macros" }
runmat-builtins = { version = "=0.2.8", path = "crates/runmat-builtins" }
runmat-runtime = { version = "=0.2.8", path = "crates/runmat-runtime", default-features = false }
runmat-time = { path = "crates/runmat-time", version = "0.2.8" }
runmat-kernel = { version = "=0.2.8", path = "crates/runmat-kernel" }
runmat-turbine = { version = "=0.2.8", path = "crates/runmat-turbine" }
runmat-gc = { version = "=0.2.8", path = "crates/runmat-gc" }
runmat-snapshot = { version = "=0.2.8", path = "crates/runmat-snapshot", default-features = false }
runmat-filesystem = { version = "=0.2.8", path = "crates/runmat-filesystem" }
runmat-config = { version = "=0.2.8", path = "crates/runmat-config" }
runmat-accelerate = { version = "=0.2.8", path = "crates/runmat-accelerate" }
runmat-accelerate-api = { version = "=0.2.8", path = "crates/runmat-accelerate-api" }
runmat-gc-api = { version = "=0.2.8", path = "crates/runmat-gc-api" }
runmat-thread-local = { version = "0.1.0", path = "crates/runmat-thread-local" }

