[package]
name = "runmat"
version = "0.0.1"
edition = "2021"
description = "High-performance MATLAB/Octave runtime with Jupyter kernel support"
authors = ["Dystr Team"]
license-file = "../LICENSE.md"
readme = "../README.md"
repository = "https://github.com/runmat-org/runmat"
keywords = ["matlab", "octave", "jupyter", "kernel", "interpreter"]
categories = ["science", "development-tools"]

[[bin]]
name = "runmat"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
toml = "0.8"
dirs = "5.0"
atty = "0.2"
env_logger = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }

# RunMat crates
runmat-kernel = { path = "../crates/runmat-kernel" }
runmat-repl = { path = "../crates/runmat-repl" }
runmat-parser = { path = "../crates/runmat-parser" }
runmat-hir = { path = "../crates/runmat-hir" }
runmat-ignition = { path = "../crates/runmat-ignition" }
runmat-runtime = { path = "../crates/runmat-runtime" }
runmat-turbine = { path = "../crates/runmat-turbine" }
runmat-gc = { path = "../crates/runmat-gc" }
runmat-builtins = { path = "../crates/runmat-builtins" }
runmat-snapshot = { path = "../crates/runmat-snapshot" }
runmat-plot = { path = "../crates/runmat-plot" }

[features]
# GUI plotting features and BLAS/LAPACK (enabled by default)
default = ["gui", "blas-lapack"]
gui = ["runmat-plot/gui"]
blas-lapack = ["runmat-runtime/blas-lapack"]
blas-only = ["runmat-runtime/blas-only"]

[dev-dependencies]
tempfile = "3.12" 