[package]
name = "runmat-accelerate-api"
version = "0.5.5"
edition = "2021"
description = "Common API types for RunMat GPU acceleration backends"
license-file = "../LICENSE.md"
homepage = "https://runmat.com"
repository = "https://github.com/runmat-org/runmat"

[features]
default = []
wgpu = ["dep:wgpu"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
once_cell = "1"

[dev-dependencies]
serde_json = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "24.0.0", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wgpu = { version = "0.19", optional = true }
