[package]
name = "runmat-accelerate"
version = "0.2.4"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Pluggable GPU acceleration layer for RunMat (CUDA, ROCm, Metal, Vulkan/Spir-V)"

[features]
# Backends are opt-in features
cuda = []
rocm = []
metal = []
vulkan = []
opencl = []
wgpu = ["dep:wgpu", "dep:pollster"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
runmat-builtins = { workspace = true }
runmat-runtime = { workspace = true }
runmat-hir = { workspace = true }
runmat-accelerate-api = { workspace = true }
once_cell = "1"
bytemuck = { version = "1.14", features = ["derive"] }
log = { workspace = true }
env_logger = { workspace = true }
serde_json = { workspace = true }
dirs = "5.0"
num-complex = "0.4"
rustfft = "6.2"
smallvec = "1.13"
rand = "0.8"

# Optional backend deps
wgpu = { version = "0.19", optional = true }
pollster = { version = "0.3", optional = true }

[dev-dependencies]
tempfile = "3.12"
runmat-ignition = { workspace = true }
runmat-parser = { workspace = true }
runmat-hir = { workspace = true }
