[package]
name = "runmat-async"
version = "0.4.6"
edition = "2021"
description = "Shared async runtime error types and host I/O interaction primitives for RunMat"
homepage = "https://runmat.com"
repository = "https://github.com/runmat-org/runmat"

[dependencies]
thiserror = { workspace = true }
miette = { workspace = true }


