[package]
name = "runmat-builtins"
version = "0.5.5"
edition = "2021"
authors = ["Dystr Team"]
license-file = "../LICENSE.md"
description = "RunMat built-in functions and standard library components"
homepage = "https://runmat.com"
repository = "https://github.com/runmat-org/runmat"

[dependencies]
inventory = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
runmat-accelerate-api = { workspace = true }
runmat-async = { workspace = true }
runmat-gc-api = { workspace = true }
runmat-thread-local = { workspace = true }
indexmap = { version = "1.9", features = ["std"] }
once_cell = { workspace = true }
num-bigint = "0.4"
num-integer = "0.1"
num-traits = "0.2"

[dev-dependencies]
runmat-macros = { workspace = true }
