[package]
name = "runmat-config"
version = "0.2.8"
edition = "2021"
description = "Shared configuration schema and loaders for RunMat"
license = "MIT"

[features]
accelerate = ["runmat-accelerate"]

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
dirs = "5.0"
log = { workspace = true }
runmat-accelerate = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
thiserror = { workspace = true }
toml = "0.8"

[dev-dependencies]
once_cell = "1"
tempfile = "3.12"
