[package]
name = "runmat-config"
version = "0.5.4"
edition = "2021"
description = "Shared configuration schema and loaders for RunMat"
license = "Apache-2.0"
homepage = "https://runmat.com"
repository = "https://github.com/runmat-org/runmat"

[features]
accelerate = ["runmat-accelerate"]

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
dirs = "5.0"
log = { workspace = true }
runmat-accelerate = { workspace = true, optional = true }
runmat-filesystem = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = "0.8"

[dev-dependencies]
once_cell = "1"
tempfile = "3.12"
