[package]
name = "runmat-core"
version = "0.5.3"
edition = "2021"
authors = ["Dystr Team"]
license-file = "../../LICENSE.md"
description = "Host-agnostic RunMat execution engine (parser, interpreter, snapshot loader)"
homepage = "https://runmat.com"
repository = "https://github.com/runmat-org/runmat"

[dependencies]
runmat-lexer = { workspace = true }
runmat-parser = { workspace = true }
runmat-hir = { workspace = true }
runmat-mir = { workspace = true }
runmat-vm = { workspace = true }
runmat-config = { workspace = true }
runmat-accelerate = { workspace = true }
runmat-accelerate-api = { workspace = true }
runmat-turbine = { workspace = true, optional = true }
runmat-gc = { workspace = true }
runmat-builtins = { workspace = true }
runmat-telemetry = { workspace = true }
anyhow = "1.0"
log = "0.4"
tracing = "0.1"
uuid = { version = "1", features = ["v4"], default-features = false }
runmat-time = { workspace = true }
runmat-filesystem = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies.uuid]
version = "1"
features = ["v4", "js"]
default-features = false

[features]
default = ["jit"]
jit = ["dep:runmat-turbine"]
occt-native = ["runmat-runtime/occt-native"]
occt-wasm-host = ["runmat-runtime/occt-wasm-host"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
runmat-runtime = { workspace = true, features = ["plot-core"] }
runmat-snapshot = { workspace = true, features = ["compression-native", "validation"] }
futures = "0.3"
tokio = { workspace = true, features = ["sync"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
runmat-runtime = { workspace = true, features = ["plot-web"] }
runmat-snapshot = { workspace = true, features = ["compression-wasm", "validation"] }

[dev-dependencies]
runmat-runtime = { workspace = true, features = ["interaction-test-hooks", "plot-core"] }
futures = "0.3"
wasm-bindgen-test = "0.3"
tempfile = "3"
