[package]
name = "runmat-ffi"
version = "0.2.7"
edition = "2021"
authors = ["Dystr Team"]
license-file = "../../LICENSE.md"
description = "Foreign Function Interface for calling native C libraries from RunMat"
repository = "https://github.com/runmat-org/runmat"

[dependencies]
runmat-builtins = { workspace = true }
runmat-macros = { workspace = true }
inventory = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
libloading = "0.8"

[dev-dependencies]
cc = "1.0"

[features]
default = []
doc_export = []
