[package]
name = "runmat-filesystem"
version = "0.2.7"
edition = "2021"
description = "Swappable filesystem abstraction for RunMat hosts (native, wasm, remote)."
license-file = "../LICENSE.md"

[dependencies]
once_cell = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
crossbeam-utils = "0.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["XmlHttpRequest", "XmlHttpRequestResponseType"] }

[dev-dependencies]
tempfile = "3.10"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1.36", features = ["macros", "rt-multi-thread"] }
axum = "0.7"
