[package]
name = "runmat-hir"
version = "0.0.14"
edition = "2021"
authors = ["Dystr Team"]
license-file = "../LICENSE.md"

[dependencies]
runmat-parser = { workspace = true }
runmat-builtins = { workspace = true }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
runmat-lexer = { workspace = true }
