[package]
name = "runmat-hir"
version = "0.0.15"
edition = "2021"
authors = ["Dystr Team"]
license-file = "../LICENSE.md"
description = "High-level IR for RunMat with type inference and lowering utilities"
homepage = "https://runmat.org"
repository = "https://github.com/runmat-org/runmat"

[dependencies]
runmat-parser = { workspace = true }
runmat-builtins = { workspace = true }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
runmat-lexer = { workspace = true }
